# CoreWars

./: .gitignore  CMakeLists.txt  README.md  compiler_ext.cpp  controller.py  graphics.py  remote.py  serverSQL.py  setup.py  test.py
corewars/: __init__.py  config.py  controller.py  database.ini  db_setup.sql  graphics.py  serverSQL.py  test
parser/: Parser.cpp  Parser.hpp
src/: compiler.cpp  compiler.hpp  main.cpp
src/redcodeInterpreter/: RedcodeInterpreter.cpp  RedcodeInterpreter.hpp
src/redcodeInterpreter/emulator/: Emulator.cpp  Emulator.hpp  Warrior.hpp
src/redcodeInterpreter/emulator/exceptions/: OutOfMemory.hpp
src/redcodeInterpreter/errorLogger/: ErrorLogger.cpp  ErrorLogger.hpp
src/redcodeInterpreter/instruction/: CompositeInstruction.cpp  CompositeInstruction.hpp  Instruction.hpp  SingleInstruction.hpp
src/redcodeInterpreter/mnemonic/: AddressingMode.hpp  Mnemonic.hpp  Modifier.hpp  PseudoInstruction.hpp
src/redcodeInterpreter/mnemonic/identifier/: Identifier.hpp  Label.hpp  NumericValue.hpp
src/redcodeInterpreter/mnemonic/instruction/: Instruction.hpp  OneArgsInstruction.hpp  TwoArgsInstruction.hpp
src/redcodeInterpreter/parser/: Parser.cpp  Parser.hpp
src/redcodeInterpreter/parser/instruction/: CompositeInstruction.cpp  CompositeInstruction.hpp  Instruction.hpp  SingleInstruction.hpp
src/redcodeInterpreter/scanner/: Scanner.cpp  Scanner.hpp
src/redcodeInterpreter/scanner/State/: State.hpp
src/redcodeInterpreter/scanner/sourceCodeManager/: FilesystemSourceManager.cpp  FilesystemSourceManager.hpp  SourceCodeManager.cpp  SourceCodeManager.hpp
src/redcodeInterpreter/scanner/sourceCodeManager/exceptions/: SourceFileNotFound.hpp
src/redcodeInterpreter/scanner/state/: State.cpp  State.hpp
src/redcodeInterpreter/scanner/state/sourceCodeManager/: SourceCodeManager.hpp
src/redcodeInterpreter/scanner/state/sourceCodeManager/exceptions/: SourceFileNotFound.cpp
src/redcodeInterpreter/scanner/token/: Token.hpp
src/redcodeInterpreter/sourceCodeManager/: SourceCodeManager.cpp  SourceCodeManager.hpp
src/redcodeInterpreter/symbol/: AddressingMode.hpp  Modifier.hpp  PseudoInstruction.hpp  Symbol.hpp
src/redcodeInterpreter/symbol/identifier/: Identifier.hpp
src/redcodeInterpreter/symbol/instruction/: Instruction.hpp  ZeroArgsInstruction.hpp
src/redcodeInterpreter/symbolTableManager/: SymbolTableManager.hpp
src/redcodeInterpreter/symbolTableManager/identifier/: Function.hpp  Identifier.hpp  Label.hpp
src/redcodeInterpreter/token/: Identifier.hpp  Token.cpp  Token.hpp
src/redcodeInterpreter/token/keyword/: AddressingMode.hpp  Keyword.hpp  Modifier.hpp  PseudoInstruction.hpp
src/redcodeInterpreter/token/keyword/identifier/: Label.hpp  NumericValue.hpp
src/redcodeInterpreter/token/keyword/instruction/: Instruction.hpp  OneArgsInstruction.hpp  TwoArgsInstruction.hpp  ZeroArgsInstruction.hpp
sylw/: CMakeLists.txt  compiler.cpp  compiler.hpp  compiler_ext.cpp
sylw/build-dir/: CMakeCache.txt  Makefile  RedcodeInterpreter  cmake_install.cmake
sylw/src/: main.cpp
sylw/src/redcodeInterpreter/errorLogger/: ErrorLogger.cpp
sylw/src/redcodeInterpreter/scanner/: Scanner.hpp
sylw/src/redcodeInterpreter/scanner/sourceCodeManager/: FilesystemSourceManager.cpp
sylw/src/redcodeInterpreter/scanner/token/: Token.hpp
sylw/src/redcodeInterpreter/symbolTableManager/: SymbolTableManager.hpp
sylw/src/redcodeInterpreter/symbolTableManager/identifier/: Function.hpp  Identifier.hpp
test/: test
test/redcodeInterpreter/emulator/: Emulator.cpp
test/redcodeInterpreter/instruction/: Instruction.cpp
test/redcodeInterpreter/scanner/: Scanner.cpp  SourceCodeManager.cpp
test/redcodeInterpreter/symbolTableManager/: SymbolTableManager.cpp
tests/: __init__.py  controller_test.py  serverSQL2_test.py  serverSQL_test.py
unit_tests/: controller_test.py  db_test.py  serverSQL_test.py
